# nexus

./: .gitignore  MILESTONES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nexus/: __init__.py  ai.py  cli.py  db.py  models.py  security.py  ui.py
src/nexus/commands/: agent.py  chat.py  claude_init.py  config.py  dashboard.py  export.py  github.py  init.py  project.py  report.py  security.py  slack.py  sprint.py  tag.py  task.py  timer.py  watch.py  workspace.py
tests/: test_agent.py  test_agent_offline.py  test_ai.py  test_chat.py  test_chat_offline.py  test_claude_init.py  test_cli.py  test_db.py  test_deps.py  test_export.py  test_health.py  test_integrations.py  test_models.py  test_ollama.py  test_security.py  test_slack.py  test_tags.py  test_task_deps.py  test_timer.py  test_watch.py  test_workflow.py
