[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
description = "Local-first CLI project and task intelligence tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["cli", "project-management", "tasks", "ai", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.84.0",
    "google-genai>=1.66.0",
]
all = [
    "nexus[ai]",
]

[project.scripts]
nexus = "nexus.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/nexus"]
omit = ["tests/*"]
